--- a/LoadingBody/SuMing/index.html
+++ b/LoadingBody/SuMing/index.html
@@ -708,7 +708,7 @@
                   passwordContainer.innerHTML = "";
                   var passwordImage = document.createElement("img");
                   passwordImage.src =
-                    "https://s21.ax1x.com/2025/03/18/pEdbDU0.jpg";
+                    "https://s1.imagehub.cc/images/2025/05/04/f3a22bcca55064b0d38c80eec94eaf1b.jpg";
                   // 替换为你的图片 URL
                   passwordImage.classList.add("password-image");
                   passwordContainer.appendChild(passwordImage);
@@ -721,7 +721,7 @@
                 passwordContainer.innerHTML = "";
                 var passwordImage = document.createElement("img");
                 passwordImage.src =
-                  "https://s21.ax1x.com/2025/03/18/pEdbDU0.jpg";
+                  "https://s1.imagehub.cc/images/2025/05/04/f3a22bcca55064b0d38c80eec94eaf1b.jpg";
                 // 替换为你的图片 URL
                 passwordImage.classList.add("password-image");
                 passwordContainer.appendChild(passwordImage);
@@ -753,7 +753,7 @@
         switchPage("属性");
         var passwordContainer = document.getElementById("password-container");
         var passwordImage = document.createElement("img");
-        passwordImage.src = "https://s21.ax1x.com/2025/03/18/pEdbDU0.jpg";
+        passwordImage.src = https://s1.imagehub.cc/images/2025/05/04/f3a22bcca55064b0d38c80eec94eaf1b.jpg";
         passwordImage.classList.add("password-image");
         passwordImage.style.display = "block"; // 初始即显示
         passwordImage.style.opacity = "1"; // 初始不透明
