--- a/LoadingBody/SuMing/index.html
+++ b/LoadingBody/SuMing/index.html
@@ -753,7 +753,7 @@
         switchPage("属性");
         var passwordContainer = document.getElementById("password-container");
         var passwordImage = document.createElement("img");
-        passwordImage.src = https://s1.imagehub.cc/images/2025/05/04/f3a22bcca55064b0d38c80eec94eaf1b.jpg";
+        passwordImage.src = "https://s1.imagehub.cc/images/2025/05/04/f3a22bcca55064b0d38c80eec94eaf1b.jpg";
         passwordImage.classList.add("password-image");
         passwordImage.style.display = "block"; // 初始即显示
         passwordImage.style.opacity = "1"; // 初始不透明
